--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "ui-router-ng2": "^1.0.0-beta.3",
+    "ui-router-visualizer": "^2.0.11",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
